hphp/test/zend/bad/tests/classes/static_properties_003_error1.php
<?php
class C {
    protected static $y = 'C::$y';
}
$c = new C;

echo "\n--> Access non-visible static prop like instance prop:\n";
unset($c->y);
?>
==Done==